# DHInference

./: CMakeLists.txt  README.txt
examples/: CMakeLists.txt  model_backend_cuda_test.cpp  model_inference_test.cpp  model_loader_test.cpp  model_pytorch_test.py  model_triton_test.py  tensor_memory_test.cpp
include/backend/cuda/: cuda_utils.hpp
include/backend/utils/: backend_graph_model.hpp  backend_logger.hpp  backend_model_loader.hpp  backend_tensor.hpp
include/model/: model.h  model_loader.h
include/ops/: activation.h  attention.h  ffn.h  layernorm.h  matmul.h
include/utils/: logger.h  memory.h  tensor.h  utils.h
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/cuda/: CMakeLists.txt  batched_sgemm_cublas.cu  cuda_memory.cu  elementwise.cu  elementwise_oneflow.cu  layernorm.cu  layernorm_oneflow.cu  rmsnorm.cu  sgemm.cu  sgemm_cublas.cu  sgemv.cu  softmax.cu  softmax_oneflow.cu  transpose.cu  transpose_cutensor.cu
src/backend/utils/: CMakeLists.txt  backend_graph_model.cpp  backend_logger.cpp  backend_model_loader.cpp  backend_tensor.cpp
src/model/: CMakeLists.txt  model.cpp  model_loader.cpp
src/ops/: CMakeLists.txt  activation.cpp  attention.cpp  ffn.cpp  layernorm.cpp  matmul.cpp
src/utils/: CMakeLists.txt  logger.cpp  memory.cpp  tensor.cpp
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
